Fix footer ugliness on smaller screens
Don't set a footer height

--- a/css/site.scss
+++ b/css/site.scss
@@ -165,7 +165,6 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 132px;
 }
 
 .user-groups {
